--- a/style.css
+++ b/style.css
@@ -73,6 +73,11 @@
   width: 20vw;
   height: 40px;
   background-color: #63bfb6;
+  -moz-appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  color: black;
   border: none;
 }
 @media only screen and (max-width: 540px) {
